@@ -1,3 +1,8 @@
+2016-08-28 Luigi Longo <luigi.longo@cern.ch>
+	* src/Utils.cxx: added method to display fit results one time GenerateFitAndPlot
+	is called
+	* src/Utils.h
+
 2016-08-25 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* src/StatTools.cxx: fix p0exp - bug introduced by misleading comment.
 	Comment changed. See HISTFITTER-29. Also fixed -2sigma and -1sigma values.
